update checkout + demo VNPay